New event form implemented

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -22,7 +22,7 @@
 	        		<a href="#" class="dropdown-toggle" data-toggle="dropdown">События<b class="caret"></b></a>
 	        			<ul class="dropdown-menu">
 	        				<li><a href="@routes.Events.list">Список</a></li>
-	        				<li><a href="@routes.Events.add">Добавить</a></li>
+	        				<li><a href="@routes.Events.addNew">Добавить</a></li>
 	        			</ul>
 	        		</li>
 	        		
