Flash messages added

--- a/app/views/events/edit.scala.html
+++ b/app/views/events/edit.scala.html
@@ -1,5 +1,5 @@
 @* edit Template File *@
-@(ev: Form[Event])
+@(ev: Form[Event])(implicit flash:Flash)
 
 @main("Редактование события"){
 	@helper.form(action= routes.Events.update){
