--- a/app/views/events/list.scala.html
+++ b/app/views/events/list.scala.html
@@ -1,5 +1,5 @@
 @* list Template File *@
-@(events:List[Event])
+@(events:List[Event])(implicit flash:Flash)
 
 @main("Events list"){
 	<div class="list-group">
