--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String)(content: Html)(implicit flash:Flash)
 
 <!DOCTYPE html>
 
@@ -29,7 +29,27 @@
 	        	</ul>
 	      	</div>
       	</div>
-      </nav>  
+      </nav>
+      <div class="container">
+	      @if(flash.get("success").isDefined) {
+	      		<div class="alert alert-success alert-dismissable">
+				  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+				  @flash.get("success")
+				</div> 
+	      	}
+	       @if(flash.get("error").isDefined) {
+	      		<div class="alert alert-danger alert-dismissable">
+				  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+				  @flash.get("error")
+				</div> 
+	      	}
+	      	@if(flash.get("info").isDefined) {
+	      		<div class="alert alert-info alert-dismissable">
+				  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+				  @flash.get("info")
+				</div> 
+	      	}
+      	</div>	 
       <div class=container>
     	  @content
       </div>
