--- a/app/views/events/eventForm.scala.html
+++ b/app/views/events/eventForm.scala.html
@@ -1,7 +1,20 @@
 @* eventForm Template File *@
 	@(eventForm: Form[Event])
-	@helper.inputText(eventForm("id"))
-	@helper.inputText(eventForm("tp"))
-	@helper.inputText(eventForm("name"))
-	@helper.inputDate(eventForm("date"))
-	@helper.textarea(eventForm("dscr"))	
+	
+	@import views.helpers.bootstrap._
+	
+	@helper.input(eventForm("tp"), '_label -> "Тип", '_class ->"form-group"){ (id, name, value, args) =>
+    <input type="text" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" placeholder="Введите тип события">
+}
+
+	@helper.input(eventForm("name"), '_label -> "Название", '_class ->"form-group") { (id, name, value, args) =>
+    <input type="text" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control" placeholder="Введите название события">
+}
+
+	@helper.input(eventForm("date"), '_label -> "Дата", '_class ->"form-group"){ (id, name, value, args) =>
+    <input type="date" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control">
+}
+
+	@helper.input(eventForm("dscr"), '_label -> "Описание", '_class ->"form-group")	{ (id, name, value, args) =>
+    <textarea class="form-control" placeholder="Введите описание" rows="5" >@value</textarea>
+}
