--- a/app/views/events/insert.scala.html
+++ b/app/views/events/insert.scala.html
@@ -1,11 +1,13 @@
 @* insert Template File *@
 @(ev: Form[Event])(implicit flash:Flash)
+@import views.helpers.bootstrap._
 
 @main("Создание события"){
-	@helper.form(action= routes.Events.insert){
+	@helper.form(action= routes.Events.insert, 'role->"form", 'class->"form-horizontal",'_label->"ID"){
+	@helper.input(ev("id"), '_class ->"form-group"){ (id, name, value, args) =>
+    <input type="text" value="0" name="@name" id="@id" @toHtmlArgs(args) class="form-control" placeholder="Введите ID события" disabled>
+}
 	@eventForm(ev)
-	<div class="form-actions">
-		<button type="submit">Create Product</button>
-	</div>
+		<button type="submit" class="bth btn-primary btn-lg">Сохранить</button>
 	}
 }
