--- a/app/views/events/edit.scala.html
+++ b/app/views/events/edit.scala.html
@@ -5,7 +5,7 @@
 @main("Редактование события"){
 	@helper.form(action= routes.Events.update, 'role->"form", 'class->"form-horizontal",'_label->"ID"){
 	@helper.input(ev("id"), '_class ->"form-group"){ (id, name, value, args) =>
-    <input type="text" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" placeholder="Введите ID события" disabled>
+    <input type="text" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" placeholder="Введите ID события" readonly>
 }
 	@eventForm(ev)
 		<button type="submit" class="bth btn-primary btn-lg">Сохранить</button>
