--- a/app/views/events/eventForm.scala.html
+++ b/app/views/events/eventForm.scala.html
@@ -11,8 +11,11 @@
     <input type="text" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control" placeholder="Введите название события">
 }
 
-	@helper.input(eventForm("date"), '_label -> "Дата", '_class ->"form-group"){ (id, name, value, args) =>
+	@helper.input(eventForm("date.date"), '_label -> "Дата", '_class ->"form-group"){ (id, name, value, args) =>
     <input type="date" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control">
+}
+	@helper.input(eventForm("date.time"), '_label -> "Время", '_class ->"form-group"){ (id, name, value, args) =>
+    <input type="time" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control">
 }
 
 	@helper.input(eventForm("dscr"), '_label -> "Описание", '_class ->"form-group")	{ (id, name, value, args) =>
