--- a/app/views/events/edit.scala.html
+++ b/app/views/events/edit.scala.html
@@ -2,12 +2,12 @@
 @(ev: Form[Event])(implicit flash:Flash)
 @import views.helpers.bootstrap._
 
-@main("Редактование события"){
+@main(Messages("events.edit")){
 	@helper.form(action= routes.Events.update, 'role->"form", 'class->"form-horizontal",'_label->"ID"){
 	@helper.input(ev("id"), '_class ->"form-group"){ (id, name, value, args) =>
-    <input type="text" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" placeholder="Введите ID события" readonly>
+    <input type="text" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" readonly>
 }
 	@eventForm(ev)
-		<button type="submit" class="bth btn-primary btn-lg">Сохранить</button>
+		<button type="submit" class="bth btn-primary btn-lg">@Messages("save")</button>
 	}
 }
