--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,16 +14,17 @@
 	      	<div class="container">
 		      	<div class="navbar-header">
 		      		<a class="navbar-brand" href=@routes.Application.index()>
-		        		DevTrick
+		        		@Messages("app.dev")
 		        	</a>
 		        </div>
 		        <div class="collapse navbar-collapse">
 		        	<ul class="nav navbar-nav">
 		        		<li class="dropdown">
-		        		<a href="#" class="dropdown-toggle" data-toggle="dropdown">События<b class="caret"></b></a>
+		        		<a href="#" class="dropdown-toggle" data-toggle="dropdown">@Messages("events")<b class="caret"></b></a>
 		        			<ul class="dropdown-menu">
-		        				<li><a href="@routes.Events.list">Список</a></li>
-		        				<li><a href="@routes.Events.addNew">Добавить</a></li>
+		        				<li><a href="@routes.Events.list(false)">@Messages("events.active")</a></li>
+		        				<li><a href="@routes.Events.list(true)">@Messages("events.archive")</a></li>
+		        				<li><a href="@routes.Events.addNew">@Messages("add")</a></li>
 		        			</ul>
 		        		</li>
 		        		
