Seats prices form v1.0 implemented

--- a/app/views/events/details.scala.html
+++ b/app/views/events/details.scala.html
@@ -5,6 +5,7 @@
 	<div class="container">
 		<ul class="nav nav-tabs">
 			<li><a href="@routes.Events.edit(event.id)" class="btn btn-default active" role="button">@Messages("edit")</a></li>
+			<li><a href="@routes.Seats.setPrices(event.id)" class="btn btn-default active" role="button">@Messages("pricse.set.name")</a></li>
 			<li><a class="btn btn-danger active" href="@routes.Events.remove(event.id)"role="button">@Messages("delete")</a></li>	
 		</ul>
 	</div>
