--- a/app/views/events/insert.scala.html
+++ b/app/views/events/insert.scala.html
@@ -3,8 +3,8 @@
 @import views.helpers.bootstrap._
 
 @main("Создание события"){
-	@helper.form(action= routes.Events.insert, 'role->"form", 'class->"form-horizontal",'_label->"ID"){
-	@helper.input(ev("id"), '_class ->"form-group"){ (id, name, value, args) =>
+	@helper.form(action= routes.Events.insert, 'role->"form", 'class->"form-horizontal"){
+	@helper.input(ev("id"), '_class ->"form-group",'_label->"ID"){ (id, name, value, args) =>
     <input type="text" value="0" name="@name" id="@id" @toHtmlArgs(args) class="form-control" readonly>
 }
 	@eventForm(ev)
