--- a/app/views/events/prices.scala.html
+++ b/app/views/events/prices.scala.html
@@ -11,7 +11,7 @@
    						<input type="text" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" readonly>
    					}
 					@helper.input(pricesForm("prices" +"["+n+"]"), '_class ->"form-group",'_label->"Цена"){ (id, name, value, args) =>
-   						<input type="text" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" >
+   						<input type="number" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" >
    					}
 			}
 		</div>
@@ -21,11 +21,11 @@
    						<input type="text" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" readonly>
    					}
 					@helper.input(pricesForm("prices"+"["+n+"]"), '_class ->"form-group",'_label->"Цена"){ (id, name, value, args) =>
-   						<input type="text" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" >
+   						<input type="number" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" >
    					}
 			}
 		</div>
-		<button type="submit" class="bth btn-primary btn-lg">Сохранить</button>
+		<button type="submit" class="bth btn-primary btn-lg">@Messages("save")</button>
 	}
 }
 
