--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -54,7 +54,7 @@
 				</div> 
 	      	}
       	</div>	 
-      <div class=container>
+      <div class="container-fluid">
     	  @content
       </div>
        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")"></script>
