--- a/app/views/events/insert.scala.html
+++ b/app/views/events/insert.scala.html
@@ -3,11 +3,13 @@
 @import views.helpers.bootstrap._
 
 @main("Создание события"){
-	@helper.form(action= routes.Events.insert, 'role->"form", 'class->"form-horizontal"){
-	@helper.input(ev("id"), '_class ->"form-group",'_label->"ID"){ (id, name, value, args) =>
-    <input type="text" value="0" name="@name" id="@id" @toHtmlArgs(args) class="form-control" readonly>
-}
-	@eventForm(ev)
-		<button type="submit" class="bth btn-primary btn-lg">Сохранить</button>
+	<div class="container">
+		@helper.form(action= routes.Events.insert, 'role->"form", 'class->"form-horizontal"){
+		@helper.input(ev("id"), '_class ->"form-group",'_label->"ID"){ (id, name, value, args) =>
+	    <input type="text" value="0" name="@name" id="@id" @toHtmlArgs(args) class="form-control" readonly>
 	}
+		@eventForm(ev)
+			<button type="submit" class="bth btn-primary btn-lg">Сохранить</button>
+		}
+	</div>
 }
