event delete alg improved: now events are deleted with sales. Some views improvements

--- a/app/views/events/details.scala.html
+++ b/app/views/events/details.scala.html
@@ -22,6 +22,7 @@
 						Выберете сектор для просмотра свободных мест
 					<span class="caret"></span></button>
 				    	<ul class="dropdown-menu scrollable-menu">
+				    		<li><a href="@routes.Events.show(event.id)">Показать схему поля</a></li>
 				    		@for(sec<-Event.getSectors(event.id).get){
 				    			<li><a href="@routes.Events.show(event.id, sec.id)">@sec.name</a></li>
 				    		}
