--- a/app/views/sales/details.scala.html
+++ b/app/views/sales/details.scala.html
@@ -15,6 +15,7 @@
 					<dd>@("Ряд: "+seat.rowNumber+", место: "+ seat.num)</dd>
 				}
 			</dl>
+			<p><a class="btn btn-primary btn-lg active" role="button" href="@routes.Events.show(event.id)">Вернуться к событию</a>
 		</div>
 	</div>
 }
