checkseat relocated to seats contr.

--- a/app/views/seats/seatcheck.scala.html
+++ b/app/views/seats/seatcheck.scala.html
@@ -1,2 +1,9 @@
 @* seatcheck Template File *@
 @(seatCheckForm:Form[(Long, String,Int,Int)])(implicit flash:Flash)
+
+
+@import views.helpers.bootstrap._
+
+@main("Проверка доступности билета"){
+	
+}
