Seat check form v1.0 implemented

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -28,7 +28,12 @@
 		        				<li><a href="@routes.Events.addNew">@Messages("add")</a></li>
 		        			</ul>
 		        		</li>
-		        		
+	        		<li class="dropdown">
+		        		<a href="#" class="dropdown-toggle" data-toggle="dropdown">@Messages("tickets")<b class="caret"></b></a>
+		        			<ul class="dropdown-menu">
+		        				<li><a href="@routes.Seats.checkSeat">@Messages("seat.check")</a></li>
+		        			</ul>
+		        		</li>		        		
 		        	</ul>
 		      	</div>
 	      	</div>
