--- a/app/views/sales/details.scala.html
+++ b/app/views/sales/details.scala.html
@@ -17,7 +17,19 @@
 				}
 			</dl>
 			<h3>@("Итого к оплате: " + sale.price*Sale.seats(sale).length+" грн.")</h3>
-			<p><a class="btn btn-primary btn-lg active" role="button" href="@routes.Events.show(event.id)">Вернуться к событию</a>
+			@if(sale.confirmed){
+				<p><a class="btn btn-primary btn-lg active" role="button" href="@routes.Events.show(event.id)">Вернуться к событию</a></p>
+			}else{
+				<p>
+					<a class="btn btn-success btn-lg active" role="button" href="@routes.Sales.confirmSale(sale.id)">
+					Подтвердить
+					</a>
+					<a class="btn btn-danger btn-lg active" role="button" href="@routes.Sales.revertSale(sale.id)">
+					Отмена
+					</a>					
+				</p>
+			}	
+				
 		</div>
 	</div>
 }
