--- a/app/views/sales/sale.scala.html
+++ b/app/views/sales/sale.scala.html
@@ -4,25 +4,7 @@
 
 @main("Сектор "+sector.name){
 	@helper.form(action= routes.Sales.saveSale(sector.id, eventID), 'role->"form", 'class->"form-horizontal"){
-		<table class="table table-condensed table-responsive table-hover">
-		@for(row<-1 to sector.numOfRows) {
-			<tr class="small-row">
-				<td class="success">@(row)</td>
-				@for(seat<-1 to sector.seatsInRow) {
-					<td 
-					class= "@if(orderedSeats
-						exists(s=>s.rowNumber==row&&s.num==seat)){danger}else{info}">
-					@helper.input(rowForm("rows"+"["+row+"].checkedSeats["+seat+"]"), '_class ->"checkbox-inline",'_label->seat){ (id, name, value, args) =>
-   						<input type="checkbox" id="@id" name="@name"  @toHtmlArgs(args) value="true" class="checkbox-inline"
-   						@if(orderedSeats
-						exists(s=>s.rowNumber==row&&s.num==seat)){disabled}>
-						<input type="hidden" id="@id" name="@name"  @toHtmlArgs(args) value="false">
-   					}
-					</td>
-				}
-			</tr>	
-			}
-		</table>
+		@seats.seatCheckboxForm(sector, orderedSeats, rowForm)
 		<button type="submit" class="bth btn-primary btn-lg">@Messages("save")</button>
 	}
 }
