Booking search implemented

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -32,6 +32,7 @@
 		        		<a href="#" class="dropdown-toggle" data-toggle="dropdown">@Messages("tickets")<b class="caret"></b></a>
 		        			<ul class="dropdown-menu">
 		        				<li><a href="@routes.Seats.checkSeat">@Messages("seat.check")</a></li>
+		        				<li><a href="@routes.Bookings.find">Поиск брони</a></li>
 		        			</ul>
 		        		</li>		        		
 		        	</ul>
