--- a/app/views/events/edit.scala.html
+++ b/app/views/events/edit.scala.html
@@ -4,7 +4,7 @@
 
 @main(Messages("events.edit")){
 	<div class="container">
-		@helper.form(action= routes.Events.update, 'role->"form", 'class->"form-horizontal",'_label->"ID"){
+		@helper.form(action= routes.Events.update, 'role->"form", 'class->"form-horizontal"){
 		@helper.input(ev("id"), '_class ->"form-group"){ (id, name, value, args) =>
 	    <input type="text" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" readonly>
 		}
