--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -4,7 +4,7 @@
 @main("Вход в систему"){
   <div class="container">
   @helper.form(action= routes.Application.authenticate, 'role->"form", 'class->"form-signin"){
-        <h2 class="form-signin-heading">Введите Логин и Пароль для доступа</h2>
+        <h3 class="form-signin-heading">Введите логин и пароль для доступа</h3>
         <input type="text" id="login" name="login" class="form-control" placeholder="Login" required autofocus>
         <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
