--- a/app/views/events/insert.scala.html
+++ b/app/views/events/insert.scala.html
@@ -1,5 +1,5 @@
 @* insert Template File *@
-@(ev: Form[Event])(implicit flash:Flash)
+@(ev: Form[Event])(implicit flash:Flash, user:Option[User])
 @import views.helpers.bootstrap._
 
 @main("Создание события"){
