--- a/app/views/seats/seatcheck.scala.html
+++ b/app/views/seats/seatcheck.scala.html
@@ -1,5 +1,5 @@
 @* seatcheck Template File *@
-@(seatCheckForm:Form[(Long, String,Int,Int)])(implicit flash:Flash)
+@(seatCheckForm:Form[(Long, String,Int,Int)])(implicit flash:Flash, user:Option[User])
 
 
 @import views.helpers.bootstrap._
