--- a/app/views/bookings/details.scala.html
+++ b/app/views/bookings/details.scala.html
@@ -1,5 +1,5 @@
 @* details Template File *@
-@(booking:Booking, event:Event)(implicit flash:Flash)
+@(booking:Booking, event:Event)(implicit flash:Flash, user:Option[User])
 
 @main("Бронь № "+booking.id){
 	<div class="container">
