--- a/app/views/events/details.scala.html
+++ b/app/views/events/details.scala.html
@@ -1,5 +1,5 @@
 @* details Template File *@
-@(event:Event, sector:Option[Sector])(implicit flash:Flash)
+@(event:Event, sector:Option[Sector])(implicit flash:Flash, user:Option[User])
 
 @main(event.name){
 	<div class="container">
