--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,6 +1,5 @@
 @* login Template File *@
 @(loginForm: Form[Option[models.User]])(implicit flash:Flash)
-
 @main("Вход в систему"){
   <div class="container">
   @helper.form(action= routes.Application.authenticate, 'role->"form", 'class->"form-signin"){
@@ -12,4 +11,4 @@
    </div>
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/signin.css")">
     
-}
+}(flash, None)
