--- a/app/views/users/addNew.scala.html
+++ b/app/views/users/addNew.scala.html
@@ -1,31 +1,13 @@
 @* addNew Template File *@
-@(userForm: Form[User])(implicit flash:Flash)
+@(userForm: Form[User])(implicit flash:Flash, user:Option[User])
 
 @main("Новый пользователь"){
 	<div class="container">
 		@helper.form(action= routes.Users.saveUser, 'role->"form", 'class->"form-horizontal"){
-		<input type="invisible" value="0" name="id" id="id" class="form-control" readonly>
-		
-		@helper.input(userForm("name"), '_label -> Messages("name"), '_class ->"form-group") { (id, name, value, args) =>
-	    <input type="text" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control" placeholder="Введите имя пользователя">
-		}
-		
-		<div class="checkbox">
-			<lavel>
-				<input type = "checkbox" value = "true" id="edEv" name="edEv">Может редактировать события
-			</lavel>
-		</div>
-		<div class="checkbox">
-			<lavel>
-				<input type = "checkbox" value = "true" id="edS" name="edS">Может редактировать продажи
-			</lavel>
-		</div>
-		<div class="checkbox">
-			<lavel>
-				<input type = "checkbox" value = "true" id="edU" name="edU">Может редактировать пользователей
-			</lavel>
-		</div>
-			<button type="submit" class="bth btn-primary btn-lg">Сохранить</button>
+		@helper.input(userForm("id"), '_label ->"ID", '_class ->"form-group") { (id, name, value, args) =>
+	    <input type="text" value="0" name="id" id="id" class="form-control" readonly>
+		}			
+			@views.html.users.userForm(userForm)
 	}
 	</div>	
 }
