--- a/app/views/users/details.scala.html
+++ b/app/views/users/details.scala.html
@@ -6,6 +6,12 @@
 		<div class="container">
 			<ul class="nav nav-tabs">
 				<li><a href="@routes.Users.editUser(user.id)" class="btn btn-default active" role="button">@Messages("edit")</a></li>
+				<li><a href="@routes.Users.resetPassword(user.id)" class="btn btn-warning active" role="button">Сбросить пароль</a></li>
+				@if(user.isActive){
+					<li><a href="@routes.Users.disableUser(user.id)" class="btn btn-danger active" role="button">Заблокировать</a></li>
+				}else{
+					<li><a href="@routes.Users.enableUser(user.id)" class="btn btn-danger active" role="button">Разблокировать</a></li>
+				}
 			</ul>
 		</div>
 		<div class="jumbotron">
